# boilerplates-fastapi-backend

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
app/: main.py
app/middlewares/: __init__.py  cors.py
app/routers/: __init__.py
app/routers/health/: __init__.py  health.py
app/utils/: __init__.py  environment.py
tests/: conftest.py
tests/integration/health/: test_health.py
